# python-playground

./: .gitignore  CLAUDE.md  LICENSE  README.md  UV_MIGRATION.md  environment.yml  pyproject.toml  requirements.txt
algor/: inversion.py  sorting.py
algorithms/: inversion.py  sorting.py
click/: multiple_cli.py  single_cli.py
dataclass/: person.py
docs/: README.md
examples/: README.md  function_overloading.py  hello_pydantic.py  method_overriding.py  multiple_cli.py  single_cli.py  sorting_demo.py
fastai/: is-it-a-bird-creating-a-model-from-your-own-data.ipynb
fastai/bird_or_not/: bird_or_not.ipynb
fastai/bird_or_not/forest/: 52e0b4ea-47d9-4a8d-b655-d9ef1dddd0ac.jpg!d
multiprocessing/: simple.py  threads.py
notebooks/fastai/: 23_tutorial_vision.ipynb  44_tutorial_tabular.ipynb
notebooks/general/: methods.ipynb  plotting.ipynb
notes/: duckduckgo_search.ipynb  gradio.ipynb  hello-world.ipynb  models.ipynb  multiprocessing.ipynb  plotting.ipynb  request-socks-proxy-with-tor.ipynb  request_socks.ipynb  single_cli.py
notes/opencv/core/: basic_ops.ipynb
opencv/core/: basic_ops.ipynb  canny_edge_detection.ipynb
playgrounds/: fastapi_hello_world.py
plot/: track_age.py
pytorch/: hello.py  tensors.py
src/: __init__.py  inversion.py  sorting.py
src/examples/: ai_agent.py  fast_api.py  fib_spiral.py  sorting_demo.py
src/notebooks/: README.md
src/notebooks/general/: duckduckgo.ipynb
src/python_playground/algorithms/: __init__.py  inversion.py  sorting.py
src/python_playground/examples/: async_io.py
src/python_playground/pytorch/: __init__.py  quick_start.py
src/pytorch/: quick_start.py
tests/: __init__.py  test_algorithms.py  test_inversion.py  test_sorting.py
