[project]
name = "python-playground"
version = "0.1.0"
description = "A Python playground for learning algorithms, ML, and various Python libraries"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "weidonglian" }
]
keywords = ["algorithms", "machine-learning", "pytorch", "fastai", "opencv"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastai",
    "graphviz",
    "matplotlib",
    "pandas",
    "duckduckgo-search",
    "numpy",
    "fastapi[standard]",
    "pydantic",
    "click",
    "requests",
    "gradio",
    "torch",
    "torchvision",
    "torchaudio",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
    "mypy",
    "pre-commit",
]
jupyter = [
    "jupyter",
    "ipykernel",
    "ipywidgets",
]

[project.urls]
Homepage = "https://github.com/weidonglian/python-playground"
Repository = "https://github.com/weidonglian/python-playground"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "black>=23.0",
    "isort>=5.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
