[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-playground"
version = "0.1.0"
description = "A Python playground for learning algorithms, ML, and various Python libraries"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [
    { name = "weidonglian" }
]
keywords = ["algorithms", "machine-learning", "pytorch", "fastai", "opencv"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    # Lightweight core dependencies
    "click", # CLI utilities
    "requests", # HTTP requests
    "matplotlib", # Basic plotting
    "numpy", # Numeric computing (lightweight)
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "pydantic-ai>=1.0.1",
    "pydantic>=2.11.7",
    "dotenv>=0.9.9",
]

[project.optional-dependencies]
# Development tools
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
    "mypy",
    "pre-commit",
]

# Jupyter notebook support
jupyter = [
    "jupyter",
    "ipykernel",
    "ipywidgets",
]

# Data science and analysis
data = [
    "pandas",
    "seaborn",
    "plotly",
    "scipy",
    "scikit-learn",
]

# Computer vision
vision = [
    "opencv-python",
    "pillow",
    "imageio",
]

# Deep learning and AI
ml = [
    "torch",
    "torchvision",
    "torchaudio",
    "fastai",
    "transformers",
]

# Web development
web = [
    "fastapi[standard]",
    "pydantic",
    "gradio",
    "streamlit",
]

# Utilities and tools
tools = [
    "graphviz",
    "duckduckgo-search",
    "python-dotenv",
    "rich",
]

# All optional dependencies (for full installation)
all = [
    "python-playground[data,vision,ml,web,tools,jupyter]",
]

[project.urls]
Homepage = "https://github.com/weidonglian/python-playground"
Repository = "https://github.com/weidonglian/python-playground"

# Simple build configuration for playground
[tool.hatch.build.targets.wheel]
packages = ["algorithms", "examples", "pytorch"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "black>=23.0",
    "isort>=5.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
